--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@ The Swedish House Mafia
 News News News:
 </center>
 <br> <br>
+<a href="http://www.mtv.com/news/3180546/vma-kim-petras-polo-g-swedish-house-mafia/" target="_blank"> > Swedish House Mafia will perform at the 2021 VMAs pre-show! </a>
+<br> <br>
 <a href="https://edmmaniac.com/sebastian-ingrosso-teases-upcoming-swedish-house-mafia-tour/" target="_blank"> > Sebastian Ingrosso Teases The Trio's Return To Touring! (EDMManiac.com)</a>
 <br> <br>
 <a href="https://open.spotify.com/album/2gDL9x8rbeUbeA12Vf7217?si=Jfp6JzvlQIC0yFnFG3P7hg&dl_branch=1" target="_blank"> > Axtone boss, Axwell, released a new "Axwell Cut" with Jay Robinson called "Free Again!" (Spotify.com) </a>
