--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ The Swedish House Mafia
 News News News:
 </center>
 <br> <br>
+<a href="https://www.iheart.com/content/2021-09-13-swedish-house-mafia-tease-a-collaboration-with-the-weeknd/" target="_blank"> SHM AT MTV VMAs 2021!!! (Spolier Alert: They dropped a teaser of an ID with vocals of THe Weeknd!!!) </a>
+<br> <br>
+<a href="https://twitter.com/festseasonmedia/status/1436012600081489925?s=21" target="_blank"> > Axwell would be performing live at MDL BEAST : SOUNDSTORM Festival 16-19 December 2021 </a>
+<br> <br>
 <a href="http://www.mtv.com/news/3180546/vma-kim-petras-polo-g-swedish-house-mafia/" target="_blank"> > Swedish House Mafia will perform at the 2021 VMAs pre-show! </a>
 <br> <br>
 <a href="https://edmmaniac.com/sebastian-ingrosso-teases-upcoming-swedish-house-mafia-tour/" target="_blank"> > Sebastian Ingrosso Teases The Trio's Return To Touring! (EDMManiac.com)</a>
